<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/reminder_checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reminder_1"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/reminder_checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reminder_2"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/reminder_checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reminder_3"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/reminder_checkbox_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reminder_4"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/reminder_checkbox_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reminder_5"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reminder_mode_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/cancel"
                android:background="@drawable/btn_standard"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reminder_mode_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/submit"
                android:background="@drawable/btn_standard"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>