<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/light_blue"
    android:id="@+id/ll_complete_task"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_month_year"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@drawable/btn_standard"
        android:padding="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_task_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:text="@string/enter_task_name"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/task_details_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/task_name"
                            android:inputType="textCapWords"
                            android:textColor="#363A43"
                            android:textColorHint="@color/gray"
                            android:textSize="20sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/task_details_set_time_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/set_time_button_border"
                            android:text="@string/set_time"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/tv_show_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="0.4"
                            android:layout_height="150dp"
                            android:src="@drawable/calendar_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.4"
                        android:layout_height="150dp"
                        android:scaleType="fitStart"
                        android:src="@drawable/alarm_icon"
                        android:layout_margin="5dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.6"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:text="@string/set_reminder"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textAlignment="center"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/task_details_set_reminder_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_reminder"
                            android:textColor="@color/black"
                            android:background="@drawable/set_time_button_border"
                            android:textSize="20sp"
                            android:layout_margin="10dp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/task_details_repeat_btn"
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="50dp"
                        android:background="@drawable/set_time_button_border"
                        android:textSize="20sp"
                        android:layout_margin="20dp"
                        android:text="@string/repeat"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitStart"
                        android:src="@drawable/arrow_icon"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:layout_marginBottom="50dp">

                    <ImageButton
                        android:id="@+id/img_btn_normal"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/exclamation"
                        android:padding="10dp"
                        android:background="@drawable/selected_icon"/>
                    <ImageButton
                        android:id="@+id/img_btn_birthday"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/birthday"
                        android:background="@drawable/unselected_icon"/>
                    <ImageButton
                        android:id="@+id/img_btn_meeting"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/meeting_icon"
                        android:background="@drawable/unselected_icon"/>
                    <ImageButton
                        android:id="@+id/img_btn_mail"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/email_icon"
                        android:background="@drawable/unselected_icon"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_end_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/light_blue">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_details_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/btn_standard"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/task_details_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_standard"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>